--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 <body>
+    <!-- Here the background image -->
+    <img src="images/hotel-background.jpg" alt="Hotel Background" id="backgroundImage">
+
     <!-- Navigation Menu -->
     <header>
         <nav>
