--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <!-- Here the background image -->
-    <img src="images/hotel-background.jpg" alt="Hotel Background" id="backgroundImage">
+    <img src="first.jpg" alt="Hotel Background" id="backgroundImage">
 
     <!-- Navigation Menu -->
     <header>
